# adf_lvgl_boombox

./: CMakeLists.txt  partitions.csv
components/commons/include/: common.h
components/drv/: CMakeLists.txt
components/drv/tft/: Kconfig  ili9341.c
components/drv/touch/: Kconfig
components/gui/: CMakeLists.txt  gui.c  gui.h
main/: CMakeLists.txt  app_main.c  hardware.h  idf_component.yml  init_lvgl  lv_conf.h
main/lvgl_8.4/: lv_port_disp_template.c
